# Seamless_Maintenance_Bot

./: .replit  index.html  main.py  package-lock.json  package.json  pyproject.toml  replit.md  script.js  start.py  start_server.py  vite.config.ts
attached_assets/: Pasted--issue-id-55555-project-id-45-name--1756356310889_1756356310890.txt  Pasted--reply-similiar-redmine-issues-redmine--1756357432032_1756357432034.txt  Pasted-Enhance-my-existing-React-app-in-Replit-using-HTML-CSS-JS-template-with-esm-sh-CDN-with-the-foll-1754501293699_1754501293700.txt  Pasted-Kindly-update-the-React-code-with-the-following-changes-1-AI-Analysis-Recommendations-Data--1761210634919_1761210634921.txt  Pasted-Request-query-When-agent-tried-to-make-the-payment-the-error-pop-up-is-raised-Error-Pa-1758467890711_1758467890713.txt  Pasted-The-response-for-the-Mantis-fetch-issue-will-be-like-below-mantis-issue-is-1757016215526_1757016215527.txt
client/src/: App.tsx  index.css
client/src/components/: AuthRedirect.tsx  ProtectedRoute.tsx
client/src/components/ui/: tabs.tsx
client/src/lib/: utils.ts
client/src/pages/: home.tsx  issues.tsx  login.tsx  thank-you.tsx  welcome.tsx
server/: index.ts  routes.ts
shared/: schema.ts
